# melfa_robot

./: .gitignore  README.md
melfa_description/urdf/: rv7fl.xacro
melfa_driver/: CMakeLists.txt  package.xml
melfa_driver/include/melfa_driver/: melfa_hardware_interface.h  strdef.h
melfa_driver/msg/: io.msg
melfa_driver/src/: GPIO.py  melfa_driver_node.cpp  melfa_hardware_interface.cpp  melfa_loopback_node.cpp
rv7_config/: .setup_assistant  CMakeLists.txt  package.xml
rv7_config/config/: fake_controllers.yaml  gazebo_rv7fl.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  rv7fl.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml
rv7_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
