<?xml version="1.0"?>
<package format="2">
  <name>melfa_driver</name>
  <version>0.1.0</version>
  <description>The melfa_driver package</description>
  <author email="fpfeifer@stud.hs-heilbronn.de">Felix Pfeifer</author>
  <maintainer email="fpfeifer@stud.hs-heilbronn.de">Felix Pfeifer</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/melfa_driver</url>
  <url type="repository">https://github.com/felixpfeifer/melfa_robot</url>
  <url type="bugtracker">https://github.com/felixpfeifer/melfa_robot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>controller_manager</depend>
  <depend>diagnostic_updater</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <export></export>
  
</package>
